# kinglet

./: .gitignore  BUILD.gn  PROJECT.md  README.md  TODO.md  test.kl
.github/workflows/: ci.yml  release.yml
.obsidian/: workspace.json
.opencode/plans/: architecture-review.md  io-system.md  language-features.md  p1.5-plan.md
assets/brand/: README.md
docs/: Home.md
docs/.obsidian/: app.json  workspace.json
docs/Design/: Concurrency.md  Error Handling.md  Modules & Packages.md  Pattern Matching.md  Philosophy.md  Syntax.md  Traits.md  Type System.md
docs/Examples/: Constant Folding.md
docs/Implementation/: Architecture.md  Bytecode VM.md  Embeddability.md  Lexer.md  Parser.md
docs/Roadmap/: Phase 1 - MVP.md  Phase 2 - Types & Patterns.md  Phase 3 - Stdlib & Toolchain.md  Phase 4 - Concurrency.md
docs/changelog/: v0.0.2.md  v0.0.3.md
editors/vscode/: .vscodeignore  extension.js  kinglet-icon-theme.json  kinglet.tmLanguage.json  language-configuration.json  package-lock.json  package.json
src/ast/: BUILD.gn  ast.cc  ast.h
src/checker/: BUILD.gn  type_checker.cc  type_checker.h
src/compiler/: BUILD.gn  compiler.cc  compiler.h
src/kinglet/: main.cc
src/lexer/: BUILD.gn  scanner.cc  scanner.h  token.cc  token.h
src/lsp/: BUILD.gn  analysis.cc  analysis.h  completion_context.h  completion_resolver.cc  completion_resolver.h  completion_token.cc  completion_token.h  json.cc  json.h  lsp_server.cc  lsp_server.h  protocol.h  server.cc  server.h
src/lsp_server/: BUILD.gn  main.cc
src/module/: BUILD.gn  module_loader.cc  module_loader.h
(+63 files in other folders)
