group("default") {
  deps = [
    ":kinglet",
    ":kinglet-lsp",
  ]
}

executable("kinglet") {
  sources = [
    "src/kinglet/main.cc",
  ]

  deps = [
    "//src/checker",
    "//src/compiler",
    "//src/lexer",
    "//src/module",
    "//src/parser",
    "//src/vm",
  ]

  include_dirs = [
    "//src",
  ]
}

executable("kinglet-lsp") {
  sources = [
    "src/lsp_server/main.cc",
  ]

  deps = [
    "//src/checker",
    "//src/lexer",
    "//src/lsp",
    "//src/parser",
  ]

  include_dirs = [
    "//src",
  ]
}
