static_library("lsp") {
  sources = [
    "analysis.cc",
    "analysis.h",
    "document_store.cc",
    "document_store.h",
    "json.cc",
    "json.h",
    "protocol.h",
    "server.cc",
    "server.h",
    "transport.cc",
    "transport.h",
  ]

  deps = [
    "//src/checker",
    "//src/lexer",
    "//src/parser",
  ]

  include_dirs = [
    "//src",
  ]
}
