static_library("lsp") {
  sources = [
    "analysis.cc",
    "analysis.h",
    "completion_context.h",
    "completion_resolver.cc",
    "completion_resolver.h",
    "completion_token.cc",
    "completion_token.h",
    "document_store.cc",
    "document_store.h",
    "json.cc",
    "json.h",
    "protocol.h",
    "server.cc",
    "server.h",
    "transport.cc",
    "transport.h",
  ]

  deps = [
    "//src/checker",
    "//src/lexer",
    "//src/module",
    "//src/parser",
  ]

  include_dirs = [
    "//src",
  ]
}
